Document PPDG/src/objects/Collections_Note__c.object
<CustomObject>
    <description>For use by Collections to log any activity relating to Collections matters</description>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please include root cause analysis</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter from customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Letter to customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Collections Notes</relationshipLabel>
        <relationshipName>Collections_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections Notes</relationshipLabel>
        <relationshipName>Collections_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Collections Note</label>
    <nameField>
        <displayFormat>COL-{0000}</displayFormat>
        <label>Collections Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collections Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>